--- a/app/src/main/res/layout/product_detail_home.xml
+++ b/app/src/main/res/layout/product_detail_home.xml
@@ -17,8 +17,23 @@
         app:contentInsetStartWithNavigation="0dp"
         app:navigationIcon="?attr/homeAsUpIndicator"
         app:theme="@style/ToolbarColoredBackArrow"
-        app:titleTextColor="@color/white" />
+        app:titleTextColor="@color/white"
+        app:title="Potato">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp">
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/settings"
+            android:background="@color/zxing_transparent"
+            android:gravity="right"
+            />
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -60,12 +75,13 @@
                             android:scaleType="centerCrop" />
 
                         <ImageButton
+                            android:id="@+id/btn_addtoWishlistPrdDetail"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:layout_gravity="top|right"
                             android:layout_marginTop="10dp"
                             android:layout_marginRight="10dp"
-                            android:src="@drawable/settings" />
+                            android:background="@drawable/settings" />
                     </FrameLayout>
                 </android.support.v7.widget.CardView>
 
@@ -213,16 +229,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/price_layoutGrid"
-                android:background="@color/white"
+                android:background="#aaa"
                 android:orientation="vertical"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:text="Similar Products"
+                        android:fontFamily="@font/roboto_bold"
+                        android:gravity="center|left"
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        />
+                </LinearLayout>
 
                 <com.mindorks.placeholderview.PlaceHolderView xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/similarPrdDetail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scrollbars="vertical" />
+                    android:scrollbars="vertical"
+                    android:layout_marginLeft="10dp"/>
             </LinearLayout>
 
 
@@ -234,7 +269,7 @@
     <RelativeLayout
         android:id="@+id/footerPrdDetail"
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true">
 
         <LinearLayout
@@ -244,6 +279,18 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/addtoWishListPrdDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/green"
+                android:fontFamily="@font/roboto_medium"
+                android:onClick="buynow"
+                android:text="Add To WishList"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
+                android:textSize="15dp"/>
+            <Button
                 android:id="@+id/addtoCartPrdDetail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -252,18 +299,9 @@
                 android:fontFamily="@font/roboto_medium"
                 android:onClick="addcart"
                 android:text="Add To Cart"
-                android:textColor="@color/green" />
-
-            <Button
-                android:id="@+id/buynowPrdDetail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/green"
-                android:fontFamily="@font/roboto_medium"
-                android:onClick="buynow"
-                android:text="Buy Now"
-                android:textColor="@color/white" />
+                android:textColor="@color/green"
+                android:textAllCaps="false"
+                android:textSize="15dp"/>
         </LinearLayout>
 
     </RelativeLayout>
