--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,25 +2,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.home.activities.TransactionSearchActivity">
+
     <item
         android:id="@+id/action_search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_search"
         android:title="search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/Delivery"
-        android:icon="@drawable/truck"
-        app:showAsAction="always"
-        android:title="Delivery" />
-
-    <item
-        android:id="@+id/account"
-        android:title="My Account" />
-
-    <item
         android:id="@+id/notification"
-        android:title="Notifications" />
+        android:icon="@drawable/ic_notification"
+        android:title="Notifications"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/delivery"
+        android:icon="@drawable/ic_shopping_cart"
+        android:title="Delivery"
+        app:showAsAction="always" />
 
 </menu>
