--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:background="@color/white"
     android:gravity="center"
-    android:background="@color/white">
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        app:titleTextColor="@color/white"
         android:layout_height="?attr/actionBarSize"
-        app:theme="@style/ToolbarColoredBackArrow"
+        android:background="@color/colorPrimary"
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp"
         app:contentInsetStartWithNavigation="0dp"
-        app:navigationIcon="?attr/homeAsUpIndicator" />
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        app:theme="@style/ToolbarColoredBackArrow"
+        app:titleTextColor="@color/white" />
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:fitsSystemWindows="true">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="15dp"
+            android:orientation="vertical"
             android:paddingLeft="24dp"
+            android:paddingTop="15dp"
             android:paddingRight="24dp">
 
 
-
-            <ImageView android:src="@mipmap/ic_launcher"
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="72dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="15dp"
-                android:layout_gravity="center_horizontal" />
+                android:src="@mipmap/ic_launcher" />
 
             <!-- Email Label -->
             <android.support.design.widget.TextInputLayout
@@ -47,12 +47,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp">
-                <EditText android:id="@+id/input_email"
+
+                <EditText
+                    android:id="@+id/input_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
+                    android:fontFamily="@font/roboto_regular"
                     android:hint="Email"
-                    android:fontFamily="@font/roboto_regular"/>
+                    android:inputType="textEmailAddress" />
             </android.support.design.widget.TextInputLayout>
 
             <!-- Password Label -->
@@ -61,11 +63,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp">
-                <EditText android:id="@+id/input_password"
+
+                <EditText
+                    android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:hint="Password"/>
+                    android:hint="Password"
+                    android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.v7.widget.AppCompatButton
@@ -76,16 +80,17 @@
                 android:layout_marginBottom="24dp"
                 android:background="@color/green"
                 android:padding="12dp"
-                android:text="Login"/>
+                android:text="Login" />
 
-            <TextView android:id="@+id/link_signup"
+            <TextView
+                android:id="@+id/link_signup"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:text="No account yet? Create one"
+                android:fontFamily="@font/roboto_regular"
                 android:gravity="center"
-                android:textSize="16dip"
-                android:fontFamily="@font/roboto_regular"/>
+                android:text="No account yet? Create one"
+                android:textSize="16dip" />
 
         </LinearLayout>
     </ScrollView>
