--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawerLayoutHomePage"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,7 +13,7 @@
 
         <include
             android:id="@+id/toolbarHomePage"
-            layout="@layout/toolbar_home" />
+            layout="@layout/toolbar_home_new" />
 
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -64,26 +63,12 @@
             android:background="@color/whiteshadow"
             app:itemIconTint="@color/colorPrimary"
             app:itemTextColor="@color/colorPrimary"
-            app:menu="@menu/bottom_navigation" />
+            app:menu="@menu/bottom_navigation_menu" />
 
 
     </RelativeLayout>
 
 
-    <FrameLayout
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:background="@android:color/white"
-        android:paddingBottom="10dp">
 
-        <com.mindorks.placeholderview.PlaceHolderView
-            android:id="@+id/drawerViewHomePage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical" />
-    </FrameLayout>
-
-
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
 
