--- a/app/src/main/res/layout/toolbar_home.xml
+++ b/app/src/main/res/layout/toolbar_home.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:theme="@style/AppTheme.Toolbar"
-    app:titleTextAppearance="@style/AppTheme.Toolbar.Title"
-    app:subtitleTextColor="@color/white"
-    app:logo="@mipmap/logo"
+    android:background="@color/colorPrimary"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp"
     app:contentInsetStartWithNavigation="0dp"
-    android:background="@color/colorPrimary">
+    app:logo="@mipmap/logo"
+    app:subtitleTextColor="@color/white"
+    app:theme="@style/AppTheme.Toolbar"
+    app:titleTextAppearance="@style/AppTheme.Toolbar.Title">
+
     <TextView
+        android:id="@+id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Menu"
-        android:textColor="@color/white"
         android:layout_gravity="center"
-        android:id="@+id/toolbar_title"
-        android:fontFamily="@font/roboto_medium"/>
+        android:fontFamily="@font/roboto_medium"
+        android:text="Menu"
+        android:textColor="@color/white" />
 
 </android.support.v7.widget.Toolbar>
