--- a/app/src/main/res/layout/home_category.xml
+++ b/app/src/main/res/layout/home_category.xml
@@ -13,10 +13,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <include
             android:id="@+id/toolbarHomeCateg"
-            layout="@layout/search_toolbar_home_category" />
+            layout="@layout/toolbar_home_new" />
 
         <LinearLayout
             android:id="@+id/sortfilterSection"
@@ -66,14 +65,14 @@
         </LinearLayout>
 
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/navigation"
             android:layout_below="@+id/sortfilterSection"
             android:orientation="vertical">
 
-            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical|center_horizontal"
@@ -87,9 +86,7 @@
 
                 </com.mindorks.placeholderview.PlaceHolderView>
 
-
             </FrameLayout>
-
 
         </LinearLayout>
 
@@ -101,7 +98,7 @@
             android:background="@color/whiteshadow"
             app:itemIconTint="@color/colorPrimary"
             app:itemTextColor="@color/colorPrimary"
-            app:menu="@menu/bottom_navigation" />
+            app:menu="@menu/bottom_navigation_menu" />
 
     </RelativeLayout>
 </LinearLayout>
