--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <RelativeLayout
-        android:id="@+id/mainviewHomePage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -15,25 +13,18 @@
             android:id="@+id/toolbarHomePage"
             layout="@layout/toolbar_home_new" />
 
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/navigationHomePage"
             android:layout_below="@+id/toolbarHomePage"
             android:orientation="vertical">
 
-            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical|center_horizontal"
                 android:orientation="vertical">
-
-                <!--  <com.mindorks.placeholderview.PlaceHolderView
-                      android:id="@+id/slider_items"
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:scrollbars="vertical"/>-->
 
                 <com.mindorks.placeholderview.PlaceHolderView
                     android:id="@+id/list_items_homePage"
@@ -48,12 +39,8 @@
                     android:layout_gravity="center"
                     android:indeterminate="true" />
 
-
             </FrameLayout>
-
-
         </LinearLayout>
-
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigationHomePage"
@@ -64,11 +51,6 @@
             app:itemIconTint="@color/colorPrimary"
             app:itemTextColor="@color/colorPrimary"
             app:menu="@menu/bottom_navigation_menu" />
-
-
     </RelativeLayout>
-
-
-
 </LinearLayout>
 
