--- a/app/src/main/res/layout/home_page_deal_of_day.xml
+++ b/app/src/main/res/layout/home_page_deal_of_day.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/dealofdayClick"
+        style="@style/CodeFont"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/txt_DealOfDay"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:padding="10dp"
-        style="@style/CodeFont"/>
+        android:text="@string/txt_DealOfDay" />
+
     <com.mindorks.placeholderview.PlaceHolderView
         android:id="@+id/placeholderviewDealofDay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical" />
 </LinearLayout>
