--- a/app/src/main/res/layout/home_page_recommended_for_you.xml
+++ b/app/src/main/res/layout/home_page_recommended_for_you.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <TextView
+        android:id="@+id/tvRecommendList"
+        style="@style/CodeFont"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/txt_Recommended"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:padding="10dp"
-        style="@style/CodeFont" />
+        android:text="@string/txt_Recommended" />
+
     <com.mindorks.placeholderview.PlaceHolderView
         android:id="@+id/placeholderviewRecommended"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical" />
 </LinearLayout>
