--- a/app/src/main/res/layout/toolbar_home_new.xml
+++ b/app/src/main/res/layout/toolbar_home_new.xml
@@ -31,6 +31,26 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_person" />
         </LinearLayout>
-    </LinearLayout>
 
+        <!-- <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center"
+             android:layout_margin="8dp"
+             android:orientation="vertical">
+
+             <SearchView
+                 android:id="@+id/searchView"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_centerHorizontal="true"
+                 android:background="@drawable/search_border"
+                 android:backgroundTint="@color/white"
+                 android:iconifiedByDefault="false"
+                 android:queryHint="Search Product"
+                 app:theme="@style/AppSearchView"
+                 android:searchHintIcon="@color/black"
+                 android:textAlignment="center" />
+         </LinearLayout>-->
+    </LinearLayout>
 </android.support.v7.widget.Toolbar>
