--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,11 +13,11 @@
 
     <item
         android:id="@+id/navigation_wallet"
-        android:icon="@drawable/ic_person"
+        android:icon="@drawable/home"
         android:title="Wallet"/>
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_person"
+        android:icon="@drawable/home"
         android:title="Profile"/>
 </menu>
