--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,8 @@
     <color name="light_black">#555</color>
     <color name="blackshadow">#797979</color>
     <color name="grey">#9d9d9c</color>
-    <color name="green">#56bf52</color>
-    <color name="dark_green">#006400</color>
+    <color name="green">#55AE3A</color>
+    <color name="dark_green">#4CBB17</color>
     <color name="tabbackground">#e8e8e8</color>
 
     <color name="txtcolor">#8c91a4</color>
