--- a/app/src/main/res/layout/my_orders.xml
+++ b/app/src/main/res/layout/my_orders.xml
@@ -17,7 +17,40 @@
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp"
         app:contentInsetStartWithNavigation="0dp"
-        app:navigationIcon="?attr/homeAsUpIndicator" />
+        app:navigationIcon="?attr/homeAsUpIndicator" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:text="My Order"
+            android:fontFamily="@font/roboto_medium"
+            android:textSize="20dp"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:gravity="center|left"
+            />
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:src="@drawable/ic_notification"
+                android:background="@color/zxing_transparent"
+               />
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:src="@drawable/ic_info"
+                android:background="@color/zxing_transparent"
+               />
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
 
     <RelativeLayout android:background="#e1e1e1"
         android:layout_height="fill_parent"
