--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:id="@+id/orderDetailContainer"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.Toolbar
