--- a/app/src/main/res/layout/toolbar_home_new.xml
+++ b/app/src/main/res/layout/toolbar_home_new.xml
@@ -32,7 +32,7 @@
                 android:src="@drawable/ic_person" />
         </LinearLayout>
 
-        <!-- <LinearLayout
+        <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
@@ -40,17 +40,26 @@
              android:orientation="vertical">
 
              <SearchView
-                 android:id="@+id/searchView"
+                 android:id="@+id/searchView123"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:background="@drawable/search_border"
-                 android:backgroundTint="@color/white"
+                 android:backgroundTint="@color/black"
                  android:iconifiedByDefault="false"
                  android:queryHint="Search Product"
-                 app:theme="@style/AppSearchView"
                  android:searchHintIcon="@color/black"
-                 android:textAlignment="center" />
-         </LinearLayout>-->
+                 android:textAlignment="center">
+
+            <AutoCompleteTextView
+                android:id="@+id/serchviews"
+                android:background="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+             </SearchView>
+
+
+         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
