--- a/app/src/main/res/layout/toolbar_home_new.xml
+++ b/app/src/main/res/layout/toolbar_home_new.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/green"
+    android:background="@color/colorPrimary"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp"
     app:contentInsetStartWithNavigation="0dp"
@@ -32,34 +32,5 @@
                 android:src="@drawable/ic_person" />
         </LinearLayout>
 
-        <!--<LinearLayout-->
-             <!--android:layout_width="match_parent"-->
-             <!--android:layout_height="wrap_content"-->
-             <!--android:layout_gravity="center"-->
-             <!--android:layout_margin="8dp"-->
-             <!--android:orientation="vertical">-->
-
-             <!--<android.support.v7.widget.SearchView-->
-                 <!--android:id="@+id/searchView123"-->
-                 <!--android:layout_width="match_parent"-->
-                 <!--android:layout_height="wrap_content"-->
-                 <!--android:layout_centerHorizontal="true"-->
-                 <!--android:background="@drawable/search_border"-->
-                 <!--android:backgroundTint="@color/black"-->
-                 <!--android:iconifiedByDefault="false"-->
-                 <!--android:queryHint="Search Product"-->
-                 <!--android:searchHintIcon="@color/black"-->
-                 <!--android:textAlignment="center">-->
-
-            <!--<AutoCompleteTextView-->
-                <!--android:id="@+id/serchviews"-->
-                <!--android:background="@color/black"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content" />-->
-
-             <!--</android.support.v7.widget.SearchView>-->
-
-
-         <!--</LinearLayout>-->
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
