--- a/app/src/main/res/layout/home_page_recommended_item_list.xml
+++ b/app/src/main/res/layout/home_page_recommended_item_list.xml
@@ -119,7 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/green"
+                android:background="@color/colorAccent"
                 android:text="Add to Cart"
                 android:textColor="@color/white"
                 android:textSize="13dp"
