--- a/app/src/main/res/layout/reorder_dialog.xml
+++ b/app/src/main/res/layout/reorder_dialog.xml
@@ -1,125 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="280dp"
-    android:layout_height="251dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="20dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/checkout_border"
-    android:elevation="10dp"
-    android:orientation="vertical"
-    app:cardCornerRadius="8dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="1dp"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvReorder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="26dp">
+            android:layout_weight="1"
+            android:fontFamily="@font/roboto_bold"
+            android:padding="10dp"
+            android:text="Re-Order"
+            android:textColor="@color/light_black_1"
+            android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/tvReorder"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="12dp"
-                android:layout_weight="3"
-                android:fontFamily="@font/roboto_bold"
-                android:text="Re-Order"
-                android:textColor="@color/light_black_1"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/tvClose"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
-                android:layout_weight="3"
-                android:fontFamily="@font/roboto_bold"
-                android:gravity="right"
-                android:text="Close"
-                android:textColor="#FFFA5400"
-                android:textSize="10sp" />
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#FFD8D8D8" />
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvClose"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:orientation="horizontal"
-            android:paddingLeft="19dp"
-            android:paddingRight="24dp">
-
-            <TextView
-                android:id="@+id/tvdesc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content"
-                android:textColor="@color/light_black_5"
-                android:textSize="12sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="7"
-            android:orientation="horizontal"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            android:paddingBottom="8dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <Button
-                    android:id="@+id/btnCancel"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/btn_cancel_reorder"
-                    android:fontFamily="@font/roboto_regular"
-                    android:text="Cancel"
-                    android:textAllCaps="false"
-                    android:textColor="@color/green_1"
-                    android:textSize="14sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <Button
-                    android:id="@+id/btnCheckItems"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/btn_check_items"
-                    android:fontFamily="@font/roboto_bold"
-                    android:text="Check Items"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_weight="1"
+            android:fontFamily="@font/roboto_bold"
+            android:gravity="right"
+            android:padding="10dp"
+            android:text="Close"
+            android:textColor="#FFFA5400"
+            android:textSize="14sp" />
 
     </LinearLayout>
-</android.support.v7.widget.CardView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFD8D8D8" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvdesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/roboto_medium"
+            android:padding="10dp"
+            android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content"
+            android:textColor="@color/light_black_5"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_cancel_reorder"
+            android:fontFamily="@font/roboto_regular"
+            android:text="Cancel"
+            android:textAllCaps="false"
+            android:textColor="@color/green_1"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btnCheckItems"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_check_items"
+            android:fontFamily="@font/roboto_bold"
+            android:text="Check Items"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
+</LinearLayout>
