--- a/app/src/main/res/layout/add_to_money_items.xml
+++ b/app/src/main/res/layout/add_to_money_items.xml
@@ -2,25 +2,25 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llAddtoMoneyItem"
-    android:layout_width="100dp"
+    android:layout_width="wrap_content"
     android:layout_height="50dp"
     android:background="@drawable/yellow_border"
-    android:padding="10dp"
+    android:padding="15dp"
     android:layout_marginRight="10dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Rs"
         android:textColor="@color/colorPrimary"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:fontFamily="@font/roboto_bold"/>
     <TextView
         android:id="@+id/tvAddtoAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="amount"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="@color/colorPrimary"
         android:fontFamily="@font/roboto_bold"
-        android:layout_marginLeft="5dp"/>
+        android:layout_marginLeft="5dp" />
 </LinearLayout>
