--- a/app/src/main/res/layout/add_to_money_items.xml
+++ b/app/src/main/res/layout/add_to_money_items.xml
@@ -3,9 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llAddtoMoneyItem"
     android:layout_width="wrap_content"
-    android:layout_height="50dp"
+    android:layout_height="30dp"
     android:background="@drawable/yellow_border"
-    android:padding="15dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    android:paddingRight="10dp"
+    android:paddingLeft="10dp"
     android:layout_marginRight="10dp">
     <TextView
         android:layout_width="wrap_content"
