--- a/app/src/main/res/layout/addtomoney_success_ack.xml
+++ b/app/src/main/res/layout/addtomoney_success_ack.xml
@@ -30,7 +30,7 @@
             android:paddingRight="30dp">
 
             <ImageView
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="150dp"
                 android:background="@drawable/card"
                 android:layout_gravity="center" />
@@ -53,7 +53,7 @@
                 android:textColor="@color/light_black_1"
                 android:fontFamily="@font/roboto_bold"
                 android:textAlignment="center"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="20dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorAccent"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/roboto_bold"
                 android:text="Go Back"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
