--- a/app/src/main/res/layout/loyality_points_details.xml
+++ b/app/src/main/res/layout/loyality_points_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +19,11 @@
         app:title="Loyality Point Details"
         app:titleTextColor="@color/white"></android.support.v7.widget.Toolbar>
 
-    <RelativeLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -91,16 +95,17 @@
                     android:background="@drawable/linearlayout_border"
                     android:orientation="horizontal">
 
-                    <TextView
+                    <EditText
                         android:id="@+id/tvReedem"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto_bold"
                         android:gravity="center|left"
                         android:padding="10dp"
-                        android:text="100"
+                        android:hint="100"
                         android:textColor="@color/light_black_1"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:background="@color/zxing_transparent"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -130,22 +135,23 @@
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
+
+    </ScrollView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/btnProceed"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
-
-            <Button
-                android:id="@+id/btnProceed"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorAccent"
-                android:fontFamily="@font/roboto_regular"
-                android:text="Proceed"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
-        </LinearLayout>
-    </RelativeLayout>
-
-</LinearLayout>
+            android:layout_height="match_parent"
+            android:background="@color/colorAccent"
+            android:fontFamily="@font/roboto_bold"
+            android:text="Proceed"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
+</RelativeLayout>
