--- a/app/src/main/res/layout/loyality_points_success.xml
+++ b/app/src/main/res/layout/loyality_points_success.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@color/white"
-            android:paddingTop="100dp"
+            android:paddingTop="50dp"
             android:paddingLeft="50dp"
             android:paddingRight="50dp">
 
@@ -43,7 +43,7 @@
                 android:textColor="@color/light_black_1"
                 android:fontFamily="@font/roboto_bold"
                 android:textAlignment="center"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="20dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
                 android:textColor="@color/light_black_1"
                 android:fontFamily="@font/roboto_bold"
                 android:textAlignment="center"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="20dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorAccent"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/roboto_bold"
                 android:text="Go Back"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
